--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -134,7 +134,7 @@
               <div class="col-6 col-sm-4 col-lg-4" data-aos="fade-up">
                 <div class="skills-card">
                   <div class="skills-img">
-                    <img src="../assets/img/html.png" alt="HTML">
+                    <img src="assets/img/html.png" alt="HTML">
                   </div>
                   <div class="skills-name">
                     <p>HTML</p>
@@ -145,7 +145,7 @@
               <div class="col-6 col-sm-4 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="skills-card">
                   <div class="skills-img">
-                    <img src="/iPortfolio/iPortfolio/assets/img/css.png" alt="CSS">
+                    <img src="assets/img/css.png" alt="CSS">
                   </div>
                   <div class="skills-name">
                     <p>CSS</p>
@@ -156,7 +156,7 @@
               <div class="col-6 col-sm-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="skills-card">
                   <div class="skills-img">
-                    <img src="/iPortfolio/iPortfolio/assets/img/js.jpg" alt="JavaScript">
+                    <img src="assets/img/js.jpg" alt="JavaScript">
                   </div>
                   <div class="skills-name">
                     <p>JavaScript</p>
@@ -167,7 +167,7 @@
               <div class="col-6 col-sm-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="skills-card">
                   <div class="skills-img">
-                    <img src="/iPortfolio/iPortfolio/assets/img/php.png" alt="PHP">
+                    <img src="assets/img/php.png" alt="PHP">
                   </div>
                   <div class="skills-name">
                     <p>PHP</p>
@@ -178,7 +178,7 @@
               <div class="col-6 col-sm-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="skills-card">
                   <div class="skills-img">
-                    <img src="/iPortfolio/iPortfolio/assets/img/c.png" alt="C#">
+                    <img src="assets/img/c.png" alt="C#">
                   </div>
                   <div class="skills-name">
                     <p>C#</p>
@@ -189,7 +189,7 @@
               <div class="col-6 col-sm-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="skills-card">
                   <div class="skills-img">
-                    <img src="/iPortfolio/iPortfolio/assets/img/sql.jpg" alt="SQL">
+                    <img src="assets/img/sql.jpg" alt="SQL">
                   </div>
                   <div class="skills-name">
                     <p>SQL</p>
@@ -200,7 +200,7 @@
               <div class="col-6 col-sm-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="skills-card">
                   <div class="skills-img">
-                    <img src="/iPortfolio/iPortfolio/assets/img/linux.png" alt="Linux">
+                    <img src="assets/img/linux.png" alt="Linux">
                   </div>
                   <div class="skills-name">
                     <p>Linux</p>
@@ -212,7 +212,7 @@
                 <div class="col-6 col-sm-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                   <div class="skills-card">
                     <div class="skills-img">
-                      <img src="/iPortfolio/iPortfolio/assets/img/laravel.png" alt="Laravel">
+                      <img src="assets/img/laravel.png" alt="Laravel">
                     </div>
                     <div class="skills-name">
                       <p>Laravel</p>
@@ -222,7 +222,7 @@
                 <div class="col-6 col-sm-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                   <div class="skills-card">
                     <div class="skills-img">
-                      <img src="/iPortfolio/iPortfolio/assets/img/entity.png" alt="Entity">
+                      <img src="assets/img/entity.png" alt="Entity">
                     </div>
                     <div class="skills-name">
                       <p>Entity</p>
